<resources>
    <!-- General strings -->
    <string name="app_name">Meet\'chup</string>


    <!-- Authentication and profile -->
    <string name="auth_switch_to_signin_label">Already have an account ?</string>
    <string name="auth_switch_to_signup_label">Don\'t have an account yet ?</string>
    <string name="auth_signin_btn">Sign In</string>
    <string name="auth_signup_btn">Sign Up</string>
    <string name="auth_signout_btn">Sign Out</string>
    <string name="auth_set_up_btn">Submit</string>
    <string name="profile_edit_update_btn">Update</string>
    <string name="auth_email_hint">Email</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_password_confirm_hint">Password confirmation</string>
    <string name="auth_setup_username_hint">Username</string>
    <string name="auth_sign_in_with_provider">Continue with</string>
    <string name="auth_error_form">An error occurred, please check your information</string>
    <string name="auth_social_method">Social authentication</string>
    <string name="auth_classic_method">Classic authentication</string>
    <string name="default_username">Unknown</string>
    <string name="profile_button_content_description">Profile button</string>
    <string name="profile_updated_success">Your profile has been updated.</string>
    <string name="profile_user_picture">User profile picture</string>
    <string name="profile_edit_mail_label">Update your email</string>
    <string name="profile_edit_name_label">Update your name</string>
    <string name="profile_edit_password_label">Update your password</string>
    <string name="profile_edit_delete_label">Delete your account</string>
    <string name="profile_edit_delete_verification">I\'m sure, I want to delete my account</string>
    <string name="profile_edit_delete_btn">Delete my account permanently.</string>


    <!-- Provider names -->
    <string name="provider_google">Google</string>
    <string name="provider_twitter">Twitter</string>
    <string name="provider_facebook">Facebook</string>


    <!--  Event view navigation bar  -->
    <string name="event_nav_feed">Feed</string>
    <string name="event_nav_album">Album</string>
    <string name="event_nav_todo">ToDo</string>


    <!-- Event duration labels-->
    <plurals name="week_label">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="day_label">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>


    <!-- Callback errors -->
    <string name="error_re_auth_required">Please sign-out and log in again to perform this action</string>
    <string name="error_unknown">An error occurred</string>
    <string name="error_weak_password">Password too weak</string>
    <string name="error_mail_collision">Email already exists</string>
    <string name="error_invalid_credentials">Email / password doesn\'t match</string>
    <string name="error_network">please check your network connection</string>
    <string name="error_nologged">You have to be logged to perform this action</string>
    <string name="error_invitation_key_collision">You cannot choose this key</string>
    <string name="error_invitation_key_notfound">Invalid key</string>


    <!-- Validators error message -->
    <string name="validator_basic">Must be comprise between %1$d and %2$d characters</string>
    <string name="validator_basic_no_max">At least %1$d characters required</string>
    <string name="validator_basic_not_empty">Cannot be empty</string>
    <string name="validator_email">Invalid email format</string>
    <string name="validator_password">Invalid password, %1$d characters minimum</string>
    <string name="validator_password_confirm">Passwords doesn\'t match</string>
    <string name="validator_username">Please enter a name between %1$d and %2$d characters</string>
    <string name="validator_invitation_key">Invalid key, %1$d characters minimum</string>


    <!-- Invitation system -->
    <string name="join_event_help">Ask a participant for the event key invitation</string>
    <string name="invitation_key_status_enable">Invitation key enable !</string>
    <string name="invitation_key_status_disable">Invitation key disable !</string>
    <string name="invitation_key_hint">Invitation key</string>
    <string name="invitation_update_key_button">Change the invitation key</string>
    <string name="invitation_description">To share this event with other friends, you need to give them the invitation key below.</string>
    <string name="invitation_warning_description">Everyone with this key will be able to join the event.</string>

    <!-- Event creation / modification -->
    <string name="create_event_success">Event created !</string>
    <string name="menu_event_modify">Modify event</string>
    <string name="modify_event_button">Modify</string>
    <string name="create_event_button">Create</string>
    <string name="create_event_title">Create event</string>
    <string name="modify_event_title">Modify event</string>

    <!-- Unclassified / temporary -->
    <string name="google_web_client_id">147707161348-8sr2m5vtelitrtjdht93vdcv3ri87258.apps.googleusercontent.com</string>
    <string name="item_post_image_description">post image</string>
    <string name="item_photo_image_description">post image</string>
    <string name="event_empty_post_indicator">No post</string>
    <string name="event_empty_photo_indicator">No photos</string>
    <string name="event_add_new_post_btn_label">Add a new post</string>
    <string name="post_description_hint_text">Enter the description of your post here</string>
    <string name="event_participants_add_label">add</string>
    <string name="post_view_no_comments">No comments</string>
    <string name="loading_btn">Loading …</string>
    <string name="join_event_btn">Join</string>
    <string name="quit_event_btn">Yeah, remove me</string>
    <string name="content_description_icon_info">icon info</string>
    <string name="event_key_disable_btn">Disable</string>
    <string name="invalid_form">Invalid form, please check your data</string>
    <string name="invitation_update_key_btn">Update invitation key</string>
    <string name="invitation_key_update_form_success">Key updated !</string>
    <string name="user_empty_events_indicator">No events</string>
    <string name="menu_event_share">Share this event !</string>
    <string name="menu_post_delete">Delete this post</string>

    <string name="menu_event_quit">Quit this event</string>
    <string name="share_event_button_first_creation">Share the event !</string>
    <string name="unknown_user">Unknown user</string>
    <string name="new_post">New post</string>
    <string name="add_image">Add image</string>
    <string name="delete_image">Remove image</string>
    <string name="new_post_error">"Cannot upload your photo. Please try again.</string>
    <string name="post_delete_error">Cannot delete your post</string>
    <string name="post_delete_loading">Loading ...</string>


</resources>
