<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        style="@style/SubtitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_social_method" />

    <!-- Providers auth fragment -->
    <fragment
        android:id="@+id/sign_in_providers"
        android:name="com.progmobile.meetchup.ui.authentication.providers_auth.ProvidersAuthFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        style="@style/SubtitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_classic_method" />

    <!-- Email field -->
    <com.progmobile.meetchup.utils.form_views.TextFormLayout
        android:id="@+id/auth_signin_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/auth_email_hint"
        app:inputType="email"/>

    <!-- Password field -->
    <com.progmobile.meetchup.utils.form_views.TextFormLayout
        android:id="@+id/auth_signin_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/auth_password_hint"
        app:inputType="password"
        app:colorTint="@color/auth_text_color"/>

    <!-- Submit button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/form_submit_btn"
        style="@style/AuthenticationFlatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_signin_btn" />

</LinearLayout>