<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_margin_horizontal"
        android:paddingEnd="@dimen/activity_margin_horizontal"
        android:paddingTop="@dimen/activity_margin_vertical"
        android:paddingBottom="@dimen/activity_margin_vertical">

        <!-- Invitation system description-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_spacing"
            android:text="@string/invitation_description"/>

        <!-- Invitation system warning description -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/block_spacing"
            android:text="@string/invitation_warning_description"/>

        <!-- Switcher to enable / disable the invitation key -->
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/event_invit_enablekey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/invitation_key_status_enable"/>

        <!-- Text input for the key -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_invit_key_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/invitation_key_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_invit_key_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Button to update the invitation key -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/event_invit_updatekey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitation_update_key_button"/>
    </LinearLayout>
</ScrollView>